--- a/index.html
+++ b/index.html
@@ -1931,7 +1931,7 @@
             // Register service worker for PWA offline support
             if ('serviceWorker' in navigator) {
                 window.addEventListener('load', () => {
-                    navigator.serviceWorker.register('/service-worker.js')
+                    navigator.serviceWorker.register('./service-worker.js')
                         .then(reg => console.log('✓ Service Worker registered'))
                         .catch(err => console.log('Service Worker registration failed:', err));
                 });
