--- a/index.html
+++ b/index.html
@@ -70,6 +70,39 @@
                             <strong>Technician:</strong> tech1 / tech123
                         </div>
                     </div>
+
+                    <!-- Powered By Footer -->
+                    <div class="powered-by" style="
+                        margin-top: 1.5rem;
+                        padding-top: 1rem;
+                        border-top: 1px solid rgba(255,255,255,0.1);
+                        text-align: center;
+                        font-size: 0.8rem;
+                        color: var(--text-muted);
+                    ">
+                        <div style="
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            gap: 0.5rem;
+                        ">
+                            <span style="
+                                background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+                                -webkit-background-clip: text;
+                                -webkit-text-fill-color: transparent;
+                                background-clip: text;
+                                font-weight: 600;
+                            ">Powered by Starcity</span>
+                        </div>
+                        <a href="tel:0760825555" style="
+                            display: inline-block;
+                            margin-top: 0.5rem;
+                            color: var(--accent);
+                            text-decoration: none;
+                            font-weight: 500;
+                            font-size: 0.9rem;
+                        ">📞 076 082 5555</a>
+                    </div>
                 </div>
             </div>
         </div>
