--- a/index.html
+++ b/index.html
@@ -1012,6 +1012,11 @@
                             <span class="nav-btn-icon">💾</span>
                             <span class="nav-btn-label">Data Backup</span>
                         </button>
+                        <button class="nav-btn" onclick="app.forceRefresh()"
+                            style="border-color: rgba(239, 68, 68, 0.3);">
+                            <span class="nav-btn-icon">🔄</span>
+                            <span class="nav-btn-label" style="color: var(--danger);">Force Refresh</span>
+                        </button>
                         <button class="nav-btn" onclick="app.logout()">
                             <span class="nav-btn-icon">🚪</span>
                             <span class="nav-btn-label">Logout</span>
