--- a/index.html
+++ b/index.html
@@ -1432,7 +1432,7 @@
                 </div>
                 <div class="modal-body">
                     <form id="userForm" class="form">
-                        <input type="hidden" id="userId">
+                        <input type="hidden" id="editUserId">
                         <div class="form-group">
                             <label for="userName">Full Name *</label>
                             <input type="text" id="userName" required>
@@ -1443,7 +1443,7 @@
                         </div>
                         <div class="form-group">
                             <label for="userPassword">Password *</label>
-                            <input type="text" id="userPassword" required>
+                            <input type="password" id="userPassword" required>
                         </div>
                         <div class="form-group">
                             <label for="userRole">Role</label>
@@ -1452,14 +1452,19 @@
                                 <option value="manager">Manager</option>
                             </select>
                         </div>
-                        <div class="form-group" style="flex-direction: row; align-items: center; gap: 0.5rem;">
+                        <div class="form-group">
+                            <label for="userPhone">Phone Number</label>
+                            <input type="tel" id="userPhone" placeholder="Optional">
+                        </div>
+                        <div class="form-group"
+                            style="flex-direction: row; align-items: center; gap: 0.5rem; margin-top: 0.5rem;">
                             <input type="checkbox" id="userActive" checked style="width: auto;">
                             <label for="userActive">Account Active</label>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-outline"
                                 onclick="app.closeModal('userModal')">Cancel</button>
-                            <button type="submit" class="btn btn-primary" id="userSubmitBtn">Create User</button>
+                            <button type="submit" class="btn btn-primary" id="userSubmitBtn">Save User</button>
                         </div>
                     </form>
                 </div>
@@ -1792,53 +1797,6 @@
             </div>
         </div>
 
-        <!-- User Management Modal -->
-        <div id="userModal" class="modal">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h3 id="userModalTitle">Add New User</h3>
-                    <button class="modal-close" onclick="app.closeModal('userModal')">×</button>
-                </div>
-                <div class="modal-body">
-                    <form id="userForm" onsubmit="event.preventDefault(); app.handleUserSubmit();">
-                        <input type="hidden" id="editUserId">
-                        <div class="form-group">
-                            <label for="userUsername">Username *</label>
-                            <input type="text" id="userUsername" required placeholder="e.g. tech2">
-                        </div>
-                        <div class="form-group">
-                            <label for="userPassword">Password *</label>
-                            <input type="password" id="userPassword" required placeholder="Enter password">
-                            <small style="color: var(--text-muted); font-size: 0.85rem;">Leave blank when editing to
-                                keep
-                                existing password</small>
-                        </div>
-                        <div class="form-group">
-                            <label for="userName">Full Name *</label>
-                            <input type="text" id="userName" required placeholder="e.g. John Doe">
-                        </div>
-                        <div class="form-group">
-                            <label for="userRole">Role *</label>
-                            <select id="userRole" required
-                                style="width: 100%; padding: var(--spacing-md); border-radius: var(--radius-md); border: 1px solid var(--border); background: var(--surface); color: var(--text-primary);">
-                                <option value="">-- Select Role --</option>
-                                <option value="manager">Manager</option>
-                                <option value="technician">Technician</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="userPhone">Phone Number</label>
-                            <input type="tel" id="userPhone" placeholder="0771234567">
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-outline"
-                                onclick="app.closeModal('userModal')">Cancel</button>
-                            <button type="submit" class="btn btn-primary">Save User</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
 
         <!-- Credit History Modal -->
         <div id="creditHistoryModal" class="modal">
@@ -1917,52 +1875,6 @@
             </div>
         </div>
 
-        <!-- User Management Modal -->
-        <div id="userModal" class="modal">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h3 id="userModalTitle">Add New User</h3>
-                    <button class="modal-close" onclick="app.closeModal('userModal')">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <form id="userForm" onsubmit="event.preventDefault(); app.handleUserSubmit();">
-                        <input type="hidden" id="editUserId">
-                        <div class="form-group">
-                            <label for="userUsername">Username *</label>
-                            <input type="text" id="userUsername" required placeholder="e.g. tech2">
-                        </div>
-                        <div class="form-group">
-                            <label for="userPassword">Password *</label>
-                            <input type="password" id="userPassword" required placeholder="Enter password">
-                            <small style="color: var(--text-muted); font-size: 0.85rem;">Leave blank when editing to
-                                keep existing password</small>
-                        </div>
-                        <div class="form-group">
-                            <label for="userName">Full Name *</label>
-                            <input type="text" id="userName" required placeholder="e.g. John Doe">
-                        </div>
-                        <div class="form-group">
-                            <label for="userRole">Role *</label>
-                            <select id="userRole" required
-                                style="width: 100%; padding: var(--spacing-md); border-radius: var(--radius-md); border: 1px solid var(--border); background: var(--surface); color: var(--text-primary);">
-                                <option value="">-- Select Role --</option>
-                                <option value="manager">Manager</option>
-                                <option value="technician">Technician</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="userPhone">Phone Number</label>
-                            <input type="tel" id="userPhone" placeholder="0771234567">
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-outline"
-                                onclick="app.closeModal('userModal')">Cancel</button>
-                            <button type="submit" class="btn btn-primary">Save User</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
 
         <!-- Service Worker Registration -->
         <script>
